--- a/src/styles/theming/themeColors.scss
+++ b/src/styles/theming/themeColors.scss
@@ -32,7 +32,7 @@ $button-text-hover--dark: $black;
 // border colors
 $border--dark: $pink;
 // menu colors
-$menu-bar--dark: $pink;
+$menu-bar--dark: $off-white;
 // portfolio item colors
 $portfolio-item-upper-top--dark: $light-blue;
 $portfolio-item-upper-bottom--dark: $medium-blue;
